Fix form element and add form validation

--- a/TournamentTracker/TournamentTrackerWPFUI/Views/CreatePrizeView.xaml
+++ b/TournamentTracker/TournamentTrackerWPFUI/Views/CreatePrizeView.xaml
@@ -39,7 +39,7 @@
                    FontFamily="Cambria"
                    FontWeight="SemiBold"/>
         <TextBox Grid.Column="1" Grid.Row="0"
-                 Name="PlaceNumerTextBox"
+                 Name="PlaceNumberTextBox"
                  Width="150"
                  Margin="10 5 0 5"
                  HorizontalAlignment="Center"
