Update ui at Create Prize View and fix font at Create Tournament View

--- a/TournamentTracker/TournamentTrackerWPFUI/Views/CreateTournamentView.xaml
+++ b/TournamentTracker/TournamentTrackerWPFUI/Views/CreateTournamentView.xaml
@@ -168,11 +168,7 @@
                                                 HorizontalAlignment="Left">
                                                 <TextBlock Text="{Binding TeamName}"
                                                     Margin="5"
-                                                    Padding="3"
-                                                    FontSize="16px"
-                                                    FontStyle="Normal"
-                                                    FontFamily="Cambria"
-                                                    FontWeight="SemiBold"/>
+                                                    Padding="3"/>
                                             </StackPanel>
                                         </DataTemplate>
                                     </ListBox.ItemTemplate>
