--- a/TournamentTracker/TournamentTrackerWPFUI/Views/TournamentDashboardView.xaml
+++ b/TournamentTracker/TournamentTrackerWPFUI/Views/TournamentDashboardView.xaml
@@ -5,79 +5,50 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
-            Title="Dashboard"
-            Height="250"
-            Width="400"
-            GlowBrush="{DynamicResource MahApps.Brushes.Accent}"
-            WindowStartupLocation="CenterScreen"
-            ResizeMode="NoResize">
+        Title="Dashboard"
+        Height="200"
+        Width="400"
+        GlowBrush="{DynamicResource MahApps.Brushes.Accent}"
+        WindowStartupLocation="CenterScreen"
+        ResizeMode="NoResize"
+        FontFamily="Montserrat">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="8*"/>
-        </Grid.RowDefinitions>
-
-        <TextBlock Grid.Row="0"
-                   Text="Dashboard" 
-                   Margin="5" 
-                   Padding="3" 
-                   HorizontalAlignment="Center"
-                   VerticalAlignment="Center"
-                   FontSize="20px"
-                   FontFamily="Cambria"
-                   FontStyle="Normal"
-                   FontWeight="SemiBold"/>
-
-        <StackPanel Grid.Row="2"
-                            Orientation="Vertical"
-                            HorizontalAlignment="Center">
+        <StackPanel
+            Orientation="Vertical"
+            HorizontalAlignment="Center">
             <TextBlock Text="Select a Tournament:"
-                       Width="350"
-                       Margin="5 5 5 0" 
-                       Padding="3" 
-                       FontSize="16px"
-                       FontFamily="Cambria"
-                       FontStyle="Normal"
-                       FontWeight="SemiBold"/>
+                Width="350"
+                Margin="5 5 5 0" 
+                Padding="3"/>
 
             <ComboBox x:Name="TeamSplitButton"
-                      Width="350"
-                      SelectionChanged="TeamSplitButton_SelectionChanged"
-                      ItemsSource="{Binding Path=Tournaments}"
-                      Margin="5 0 5 5">
+                Width="350"
+                SelectionChanged="TeamSplitButton_SelectionChanged"
+                ItemsSource="{Binding Path=Tournaments}"
+                Margin="5 0 5 5">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
                         <TextBlock Text="{Binding TournamentName, Mode=OneWay}" 
-                                   Width="220"
-                                   FontSize="12px"
-                                   FontFamily="Cambria"
-                                   FontStyle="Normal"
-                                   FontWeight="SemiBold"/>
+                                   Width="220"/>
                     </DataTemplate>
                 </ComboBox.ItemTemplate>
             </ComboBox>
 
             <Button x:Name="LoadTournamentButton"
-                    Width="350"
-                    Margin="0 10 0 25"
-                    Content="Load Tournament"
-                    Click="LoadTournamentButton_Click"
-                    Padding="3" 
-                    FontSize="16px"
-                    FontFamily="Cambria"
-                    FontStyle="Normal"
-                    FontWeight="SemiBold"/>
+                Width="350"
+                Margin="0 10 0 25"
+                Content="Load Tournament"
+                Click="LoadTournamentButton_Click"
+                Padding="3"
+                FontFamily="Montserrat"/>
 
             <Button x:Name="CreateTournamentButton"
-                    Width="350"
-                    Margin="0 10 0 25"
-                    Content="Create Tournament"
-                    Click="CreateTournamentButton_Click"
-                    Padding="3" 
-                    FontSize="16px"
-                    FontFamily="Cambria"
-                    FontStyle="Normal"
-                    FontWeight="SemiBold"/>
+                Width="350"
+                Margin="0 10 0 25"
+                Content="Create Tournament"
+                Click="CreateTournamentButton_Click"
+                Padding="3" 
+                FontFamily="Montserrat"/>
         </StackPanel>
     </Grid>
 </Controls:MetroWindow>
