Add additional checks before score the match result

--- a/TournamentTracker/TournamentTrackerWPFUI/Views/TournamentDashboardView.xaml
+++ b/TournamentTracker/TournamentTrackerWPFUI/Views/TournamentDashboardView.xaml
@@ -23,6 +23,7 @@
 
             <ComboBox x:Name="TeamSplitButton"
                 Width="350"
+                SelectedIndex="0"
                 SelectionChanged="TeamSplitButton_SelectionChanged"
                 ItemsSource="{Binding Path=Tournaments}"
                 Margin="5 0 5 5">
